Bug 32115 - evdev seems to ignore the Option Device line
Summary: evdev seems to ignore the Option Device line
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Input/Core (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium blocker
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-05 13:04 UTC by David Ronis
Modified: 2010-12-06 20:08 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Log file (42.31 KB, text/plain)
2010-12-05 16:29 UTC, David Ronis
no flags Details

Description David Ronis 2010-12-05 13:04:13 UTC
I'm following xorg git/master and updated several components last night (in particular xserver, xf86-input-evdev, xf86-input-ati).   I'm on an older HP laptop and used an old-style xorg.conf file.
This contains lines like:

Section "ServerLayout"
	Identifier     "X.org Configured"
	Screen      0  "Screen0" 0 0
	InputDevice    "Mouse0" "CorePointer"
	InputDevice    "Mouse1" "SendCoreEvents"
	InputDevice    "Keyboard0" "CoreKeyboard"
EndSection

Section "InputDevice"
	Identifier  "Keyboard0"
	Driver      "evdev"
	Option	    "Device" "/dev/input/event1"
	Option	    "CoreKeyboard
EndSection

Section "InputDevice"
	Identifier  "Mouse0"
	Driver	    "synaptics"
	Option 	    "Protocol" "auto"
	Option	    "ZAxisMapping" "4 5 6 7"
	Option	    "LeftEdge" "120"
	Option	    "RightEdge" "830"
	Option	    "TopEdge" "120"
	Option	    "BottomEdge" "650"
	Option	    "FingerLow" "14"
	Option	    "FingerHigh" "15"
	Option	    "MaxTapTime" "180"
	Option	    "MaxTapMove" "110"
	Option	    "EmulateMidButtonTime" "75"
	Option	    "VertScrollDelta" "20"
	Option	    "HorizScrollDelta" "20"
	Option	    "MinSpeed" "0.3"
	Option	    "MaxSpeed" "0.75"
	Option	    "AccelFactor" "0.015"
	Option	    "EdgeMotionMinSpeed" "200"
	Option	    "EdgeMotionMaxSpeed" "200"
	Option	    "UpDownScrolling" "1"
	Option	    "CircularScrolling" "1"
	Option	    "CircScrollDelta" "0.1"
	Option	    "CircScrollTrigger" "2"
	Option	    "SHMConfig" "on"
EndSection

Section "InputDevice"
	Identifier  "Mouse1"
	Driver      "evdev"
	Option	    "Device" "/dev/input/event8"
	Option	    "ZAxisMapping" "4 5 6 7"
EndSection

When I start x (via startx).  I switch to video mode, the touchpad works, but neither the keyboard or usb mouse work.

The event numbers are correct.

The log shows:

[  5737.485] (II) Loading /usr/lib/xorg/modules/input/evdev_drv.so
[  5737.485] (**) Option "SendCoreEvents"
[  5737.485] (**) Mouse1: always reports core events
[  5737.485] (EE) Mouse1: No device specified.
Comment 1 Peter Hutterer 2010-12-05 15:18:45 UTC
please submit your whole log, not just a 4-line excerpt. thanks
Comment 2 David Ronis 2010-12-05 16:29:17 UTC
Created attachment 40816 [details]
Log file

Here's the log.  From what I can tell, processing of the config file ends with the error.  If I put the keyboard ahead of mouse1 it will stop there.
Comment 4 Peter Hutterer 2010-12-06 20:08:17 UTC
commit beea2378f142556471c62290e275935af848e137
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon Dec 6 14:33:43 2010 +1000

    xfree86: don't overwrite option list (#32115)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.